<resources>
    <string name="app_name">OutilCuisson2021</string>
    <string name="text_afficher_titre">Temps de cuisson</string>
    <string name="text_afficher_plat">Plat</string>
    <string name="text_afficher_duree">Durée</string>
    <string name="text_afficher_degre">Degrés</string>
    <string name="text_ajouter_titre">"Description cuisson d'un plat"</string>
    <string name="text_ajouter_duree">Durée de la cuisson</string>
    <string name="text_ajouter_temperature">Température</string>
    <string name="placeholder_ajouter_plat">Nom du plat</string>
    <string name="placeholder_ajouter_temperature">En °C</string>
    <string name="bouton_ajouter_effacer">Effacer</string>
    <string name="bouton_ajouter_valider">Valider</string>
    <string name="onglet_en_cours_0">AFFICHER</string>
    <string name="onglet_en_cours_1">AJOUTER</string>
    <string name="libelle_option1">"voir thermostat"</string>
    <string name="libelle_option2">"supprimer"</string>
    <string name="libelle_option3">"annuler"</string>
    <string name="titre_thermostat">Equivalent thermostat</string>
    <string name="text_thermostat1">Cuisson du plat:</string>
    <string name="text_thermostat2">Pour obtenir la température de</string>
    <string name="text_thermostat3">°, vous devez régler votre tour sur le thermostat</string>
    <string name="retour">retour</string>
</resources>